# lumen

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
data/uploads/: sample_ml_notes.md
src/agentrag/: __init__.py  cli.py  config.py
src/agentrag/agent/: __init__.py  graph.py  prompts.py  reflection.py
src/agentrag/api/: main.py  schemas.py
src/agentrag/core/: hybrid.py  ingest.py  loader.py  vectorstore.py
src/agentrag/tools/: __init__.py  calculator.py  retrieval.py  websearch.py
src/agentrag/ui/: app.py
src/agentrag/utils/: logging.py
src/lumen/: __init__.py  cli.py  config.py
src/lumen/agent/: graph.py  llm.py  prompts.py  reflection.py
src/lumen/api/: main.py
src/lumen/core/: hybrid.py  ingest.py  loader.py  vectorstore.py
src/lumen/tools/: __init__.py  calculator.py  retrieval.py  websearch.py
src/lumen/ui/: __init__.py  app.py
src/lumen/utils/: logging.py
tests/: test_agent.py  test_api.py  test_calculator.py  test_cli.py  test_embeddings.py  test_hybrid.py  test_llm.py  test_loader.py  test_memory_backend.py  test_reflection.py  test_tools.py
