[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen"
version = "1.0.0"
description = "Agentic RAG: an LLM agent that decides when to search your documents, the web, or compute — fully local (Ollama + LangGraph + ChromaDB)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aniketsoni2002" }]
keywords = [
    "agentic-rag", "rag", "agent", "langgraph", "llm", "genai",
    "ollama", "langchain", "chromadb", "tool-use", "react-agent",
]

# Core dependencies are torch-free and cloud-friendly. The default embedding
# backend here is FastEmbed (ONNX). For fully-local Ollama + HuggingFace
# embeddings, install the "local" extra which adds sentence-transformers.
dependencies = [
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.0",
    "langchain-chroma>=1.0",
    "langchain-ollama>=1.0",
    "langchain-groq>=0.2",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "chromadb>=0.5",
    "fastembed>=0.3",
    "pypdf>=4.0",
    "ddgs>=6.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "streamlit>=1.36",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Fully-local stack: HuggingFace sentence-transformer embeddings (pulls torch).
local = [
    "sentence-transformers>=3.0",
    "langchain-huggingface>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "sentence-transformers>=3.0",
    "langchain-huggingface>=1.0",
]

[project.scripts]
lumen = "lumen.cli:main"

[project.urls]
Homepage = "https://github.com/Aniketsoni2002/lumen"
Repository = "https://github.com/Aniketsoni2002/lumen"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's File(...)/Depends(...) in defaults is the documented idiom.
ignore = ["B008"]
